--- a/data/styles.css
+++ b/data/styles.css
@@ -1,5 +1,5 @@
-﻿.ax_形状 {
-  font-family:'ArialMT', 'Arial';
+﻿.ax_shape {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -7,8 +7,8 @@
   text-align:center;
   line-height:normal;
 }
-.ax_文本段落 {
-  font-family:'ArialMT', 'Arial';
+.ax_paragraph {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -17,7 +17,7 @@
   line-height:normal;
 }
 .ax_h1 {
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-family:'Arial Negreta', 'Arial';
   font-weight:700;
   font-style:normal;
   font-size:32px;
@@ -26,7 +26,7 @@
   line-height:normal;
 }
 .ax_h2 {
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-family:'Arial Negreta', 'Arial';
   font-weight:700;
   font-style:normal;
   font-size:24px;
@@ -35,7 +35,7 @@
   line-height:normal;
 }
 .ax_h3 {
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-family:'Arial Negreta', 'Arial';
   font-weight:700;
   font-style:normal;
   font-size:18px;
@@ -44,7 +44,7 @@
   line-height:normal;
 }
 .ax_h4 {
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-family:'Arial Negreta', 'Arial';
   font-weight:700;
   font-style:normal;
   font-size:14px;
@@ -53,7 +53,7 @@
   line-height:normal;
 }
 .ax_h5 {
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-family:'Arial Negreta', 'Arial';
   font-weight:700;
   font-style:normal;
   font-size:13px;
@@ -62,7 +62,7 @@
   line-height:normal;
 }
 .ax_h6 {
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-family:'Arial Negreta', 'Arial';
   font-weight:700;
   font-style:normal;
   font-size:10px;
@@ -70,8 +70,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_图像 {
-  font-family:'ArialMT', 'Arial';
+.ax_image {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -79,15 +79,15 @@
   text-align:center;
   line-height:normal;
 }
-.ax_文本链接 {
+.ax_text_link {
   color:#0000FF;
 }
-.ax_鼠标悬停文本链接时 {
+.ax_text_link_mouse_over {
 }
-.ax_鼠标按下文本链接时 {
+.ax_text_link_mouse_down {
 }
-.ax_文本框 {
-  font-family:'ArialMT', 'Arial';
+.ax_text_field {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -95,8 +95,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_多行文本框 {
-  font-family:'ArialMT', 'Arial';
+.ax_text_area {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -104,8 +104,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_下拉列表框 {
-  font-family:'ArialMT', 'Arial';
+.ax_droplist {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -113,8 +113,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_列表框 {
-  font-family:'ArialMT', 'Arial';
+.ax_list_box {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -122,8 +122,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_复选框 {
-  font-family:'ArialMT', 'Arial';
+.ax_checkbox {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -131,8 +131,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_单选按钮 {
-  font-family:'ArialMT', 'Arial';
+.ax_radio_button {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -140,8 +140,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_流程形状 {
-  font-family:'ArialMT', 'Arial';
+.ax_flow_shape {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -149,8 +149,8 @@
   text-align:center;
   line-height:normal;
 }
-.ax_树节点 {
-  font-family:'ArialMT', 'Arial';
+.ax_tree_node {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -158,8 +158,8 @@
   text-align:left;
   line-height:normal;
 }
-.ax_提交按钮 {
-  font-family:'ArialMT', 'Arial';
+.ax_html_button {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -167,19 +167,19 @@
   text-align:center;
   line-height:normal;
 }
-.ax_热点 {
+.ax_hot_spot {
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
-.ax_内联框架 {
+.ax_inline_frame {
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
-.ax_动态面板 {
+.ax_dynamic_panel {
   font-size:13px;
   color:#333333;
   text-align:center;
@@ -191,8 +191,8 @@
   text-align:center;
   line-height:normal;
 }
-.ax_中继器 {
-  font-family:'ArialMT', 'Arial';
+.ax_repeater {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -200,8 +200,8 @@
   text-align:center;
   line-height:normal;
 }
-.ax_表格 {
-  font-family:'ArialMT', 'Arial';
+.ax_table {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -209,8 +209,8 @@
   text-align:center;
   line-height:normal;
 }
-.ax_单元格 {
-  font-family:'ArialMT', 'Arial';
+.ax_table_cell {
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
@@ -218,26 +218,26 @@
   text-align:left;
   line-height:normal;
 }
-.ax_菜单 {
+.ax_menu {
   font-size:13px;
   color:#000000;
   text-align:center;
   line-height:normal;
 }
-.ax_水平线 {
+.ax_horizontal_line {
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
-.ax_垂直线 {
+.ax_vertical_line {
   font-size:13px;
   color:#333333;
   text-align:center;
   line-height:normal;
 }
 .ax_connector {
-  font-family:'ArialMT', 'Arial';
+  font-family:'Arial Normal', 'Arial';
   font-weight:400;
   font-style:normal;
   font-size:13px;
